orange-box (1.15) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 06 May 2014 00:00:55 -0500

orange-box (1.14-0ubuntu1) utopic; urgency=medium

  * debian/postinst, usr/bin/orange-box-add-virtual-nodes:
    - disable screensaver
    - virsh console again
  * debian/postinst, debian/preinst, usr/share/doc/orange-
    box/examples/openstack/00-bootstrap.sh:
    - revert the virtual machine installation and the bridge creation
      + bridge is causing serious problems with network manager

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 06 May 2014 00:00:52 -0500

orange-box (1.13-0ubuntu1) utopic; urgency=medium

  * usr/share/doc/orange-box/examples/openstack/00-bootstrap.sh:
    - clean up bootstrap a bit
  * debian/postinst, usr/bin/orange-box-add-virtual-nodes,
    usr/share/doc/orange-box/examples/openstack/00-bootstrap.sh:
    - set MAAS upstream DNS
    - fix typos in virtual node add
    - simplify openstack bootstrap

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 May 2014 22:57:53 -0500

orange-box (1.12-0ubuntu1) utopic; urgency=medium

  * debian/postinst:
    - fix typo in ip allocation

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 May 2014 21:12:14 -0500

orange-box (1.11-0ubuntu1) utopic; urgency=medium

  * debian/control, debian/postinst, debian/preinst, usr/bin/orange-box-
    add-all-nodes, usr/bin/orange-box-setup-kvms => usr/bin/orange-box-
    add-virtual-nodes, usr/share/doc/orange-box/examples/openstack/00-
    bootstrap.sh:
    - add a VM on the master node to MAAS
      + useful for running the Juju GUI
    - install libvirt-bin, qemu-kvm, virtinst
    - configure the internal interface to be a bridge, so that we
      can host a virtual machine here
    - tag real nodes as 'physical' (note, this isn't yet working)
    - update the setup-kvms script to create one single virtual machine
      node and add to MAAS
    - update openstack example documentation to bootstrap onto a vm
